Wed Mar 27 10:03:11 CET 2002 Daniel Veillard <daniel@veillard.com>

	* AUTHORS HACKING: Added Igor Zlatkovic as official maintainer
	* python/Makefile.am python/tests/Makefile.am: Albert Chin pointed
	  that $(datadir) should be used for docs

Mon Mar 25 17:56:44 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.15
	* doc/*: updated and rebuilt

Mon Mar 25 17:11:42 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/attributes.c libxslt/attributes.h libxslt/pattern.c
	  libxslt/xslt.c: Fix bug #76043 about cascading attribute sets
	* tests/docs/Makefile.am tests/docs/bug-80.xml
	  tests/general/Makefile.am tests/general/bug-80.*: added a 
	  specific example for bug #76043 in the regression tests

Fri Mar 22 19:26:47 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: Fixing bug #75902 error with @foo[..]
	  steps which were not compiled
	* tests/docs/Makefile.am tests/docs/bug-79.xml
	  tests/general/Makefile.am tests/general/bug-79.*: added a 
	  specific example for bug #75902 in the regression tests
	
Fri Mar 22 16:13:22 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: Fixing bug #75777 error with namespaced
	  attribute match rules evaluation
	* tests/docs/Makefile.am tests/docs/bug-78.xml
	  tests/general/Makefile.am tests/general/bug-78.*: added a 
	  specific example for bug #75777 in the regression tests
	
Thu Mar 21 17:19:56 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: found another stupid bug by step by 
	  step processing of the code
	* libxslt/pattern.c: idem, except that once stupid mistake
	  ELEM vs NODE forced the templates to be stored in a list
	  instead of a hash table, fixing this stupidity should
	  again lead to a substantive improvement of processing speed.
	  Like divide by 2 processing time for DocBook stylesheets.

Thu Mar 21 00:25:12 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing bug #75603