@@ -1,0 +1,12 @@
+<tree>
+        <a>
+                <value>3.14</value>
+        </a>
+        <b>
+                <value>2</value>
+        </b>
+        <c>
+                <value>0.5</value>
+        </c>
+</tree>
+
