@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+3.14 - 2 - 0.5 =
+0.64
+3.14 - 2 - 0.5 = 0.64
