@@ -1,3 +1,9 @@
+Fri Mar 29 18:28:23 CET 2002 Daniel Veillard <daniel@veillard.com>
+
+	* tests/docs/Makefile.am tests/docs/bug-81.xml
+	  tests/general/Makefile.am tests/general/bug-81.*: added a 
+	  specific example for bug #76927 in the regression tests
+	
 Wed Mar 27 10:03:11 CET 2002 Daniel Veillard <daniel@veillard.com>
 
 	* AUTHORS HACKING: Added Igor Zlatkovic as official maintainer
